--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,10 +1,2 @@
-$space-large: 2.5rem;
-
-.page-title {
-  margin-top: $space-large;
-  margin-bottom: $space-large;
-}
-
-input [type=search] {
-  box-shadow: none;
-}
+@import "base/vars";
+@import "components/nav";
