Add some styling for menu bar

--- a/app/styles/components/_nav.scss
+++ b/app/styles/components/_nav.scss
@@ -13,4 +13,8 @@ $nav-text-color: white;
   .menu-text {
     color: $nav-text-color;
   }
+  .menu > .menu-text > a {
+    display: inline;
+    padding: 0;
+  }
 }
